--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Capstone</title>
 
-    <base href="/" />
+<head>
+  <meta charset="utf-8" />
+  <title>Capstone</title>
 
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
+  <base href="/" />
 
-    <link rel="manifest" href="/manifest.json" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="msapplication-tap-highlight" content="no" />
 
-    <link rel="shortcut icon" type="image/png" href="/assets/icon/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
 
-    <!-- add to homescreen for ios -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <link rel="shortcut icon" type="image/png" href="/assets/icon/favicon.png" />
 
-    <script  src="https://maps.googleapis.com/maps/api/js?key=  AIzaSyBN_IKIZLzMfhPcu28VhP8u_SslBKWh-iE&libraries=places&language=en"></script>
-  </head>
+  <!-- add to homescreen for ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Ionic App" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <!-- <script src="./node_modules/socket.io-client/lib/index.js"></script> -->
 
-  <body>
-    <div id="root"></div>
-  </body>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=  AIzaSyBN_IKIZLzMfhPcu28VhP8u_SslBKWh-iE&libraries=places&language=en"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
 
 </html>
