feature: sign up with google in progress

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,25 @@
   <!-- <script src="./node_modules/socket.io-client/lib/index.js"></script> -->
 
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=  AIzaSyBN_IKIZLzMfhPcu28VhP8u_SslBKWh-iE&libraries=places&language=en"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=  AIzaSyBN_IKIZLzMfhPcu28VhP8u_SslBKWh-iE&libraries=places&language=en">
+  </script>
+
+  <!-- <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+  <script>
+    window.onLoadCallback = function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      var idToken = googleUser.getAuthResponse().id_token;
+
+      gapi.auth2.getAuthInstance().disconnect()
+      // .then(function () {
+
+      //     //Do stuff here after the user has been signed out, you can still authenticate the token with Google on the server side
+
+      //   }
+    } -->
+
+
+  </script>
 </head>
 
 <body>
