In progress: updating for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Capstone</title>
+  <title>Harmonious</title>
 
   <base href="/" />
 
@@ -24,7 +24,7 @@
 
   <script
     src="https://maps.googleapis.com/maps/api/js?key=  AIzaSyBN_IKIZLzMfhPcu28VhP8u_SslBKWh-iE&libraries=places&language=en">
-  </script>
+    </script>
 
   <!-- <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
   <script>
